feat: Add `RedisCoroutineLock` on `libcommon-redis-kotlin` module